# agent-kernel

./: .gitignore  AGENTS.md  Cargo.toml  README.md  README.zh-CN.md  clippy.toml  rust-toolchain.toml
crates/agent-kernel-image/: Cargo.toml
crates/agent-kernel-image/src/: lib.rs  main.rs
crates/agent-kernel-image/tests/: image_tool.rs
crates/agent-kernel-x86_64/: Cargo.toml
crates/agent-kernel-x86_64/src/: address_space.rs  address_space_reclamation.rs  admission_supervisor_flow.rs  agent_boot_flow.rs  agent_call.rs  agent_image.rs  agent_memory.rs  ata.rs  boot_agent_images.rs  boot_agent_trust.rs  boot_config.rs  context.rs  durable_archive_request.rs  durable_state.rs  event_trace.rs  exception_runtime.rs  fault_handler_flow.rs  fault_task_flow.rs  interrupt.rs  lib.rs  main.rs  namespace_object_wire.rs  namespace_path_buffer.rs  native_address_space_service.rs  native_agent_executor.rs  native_agent_runtime.rs  native_durable_boot.rs  native_port_io.rs  native_runtime.rs  native_runtime_admission_broker.rs  native_tpm_boot.rs  per_cpu.rs  pic.rs  pit_timer.rs  port.rs  port_command_flow.rs  port_probe.rs  privilege.rs  resource_manager_flow.rs  reuse_worker_flow.rs  (+10 more)
crates/agent-kernel-x86_64/src/acpi_topology/: discover.rs  handler.rs  mod.rs  parser.rs  types.rs
crates/agent-kernel-x86_64/src/address_space_reclamation/: types.rs
crates/agent-kernel-x86_64/src/admission_supervisor_flow/: evidence.rs  setup.rs
crates/agent-kernel-x86_64/tests/: acpi_table_discovery_contract.rs  acpi_topology_contract.rs  address_space_contract.rs  address_space_reclamation_contract.rs  agent_call_abi_contract.rs  agent_call_agent_entry_retirement_contract.rs  agent_call_agent_image_record_retirement_contract.rs  agent_call_agent_manager_contract.rs  agent_call_agent_record_retirement_contract.rs  agent_call_capability_cleanup_revocation_contract.rs  agent_call_capability_compaction_contract.rs  agent_call_capability_contract.rs  agent_call_durable_archive_contract.rs  agent_call_event_archive_contract.rs  agent_call_fault_compaction_contract.rs  agent_call_intent_compaction_contract.rs  agent_call_mailbox_contract.rs  agent_call_memory_cell_record_retirement_contract.rs  agent_call_memory_page_contract.rs  agent_call_memory_region_contract.rs  agent_call_message_retirement_contract.rs  agent_call_namespace_contract.rs  agent_call_namespace_generation_contract.rs  agent_call_namespace_hierarchy_contract.rs  agent_call_namespace_memory_transport_contract.rs  agent_call_namespace_path_rebind_contract.rs  agent_call_orphaned_message_retirement_contract.rs  agent_call_resource_contract.rs  agent_call_resource_record_retirement_contract.rs  agent_call_runtime_admission_compaction_contract.rs  agent_call_runtime_admission_contract.rs  agent_call_runtime_admission_discovery_contract.rs  agent_call_signer_rotation_contract.rs  agent_call_task_compaction_contract.rs  agent_call_task_manager_contract.rs  agent_call_task_result_contract.rs  agent_call_transcript_contract.rs  agent_call_verifier_contract.rs  agent_call_waiter_compaction_contract.rs  agent_image_loader_contract.rs  (+48 more)
crates/agent-state-signer/: Cargo.toml
crates/agent-state-signer/native/: state_signer.ld  state_signer_entry.S  tpm_call_provider.S
crates/agent-state-signer/src/: agent.rs  lib.rs  native_provider.rs  policy.rs  provider.rs
crates/agent-state-signer/tests/: durable_archive_closed_loop.rs  native_provider_abi.rs  state_signer_policy.rs
crates/agent-supervisor/: Cargo.toml
crates/agent-supervisor/src/: durable_archive_flow.rs  durable_state_backend.rs  flow_resources.rs  format.rs  format_agent.rs  format_driver.rs  format_event_archive.rs  format_fault.rs  format_signal.rs  lib.rs  main.rs  virtual_device.rs
crates/agent-supervisor/tests/: durable_state_recovery.rs  durable_state_transaction.rs  supervisor_flow.rs
(+890 files in other folders)
