[workspace]
members = [
    "crates/agent-kernel-core",
    "crates/agent-kernel-hal",
    "crates/agent-kernel",
    "crates/agent-kernel-boot",
    "crates/agent-kernel-image",
    "crates/agent-state-signer",
    "crates/agent-kernel-x86_64",
    "crates/agent-supervisor",
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT"
repository = "https://github.com/Evan-master/agent-kernel"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
