[package]
name = "agent-kernel-x86_64"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[features]
default = []
bare-metal = []

[dependencies]
agent-kernel-boot = { path = "../agent-kernel-boot" }
agent-kernel-core = { path = "../agent-kernel-core" }
agent-kernel-hal = { path = "../agent-kernel-hal" }
bootloader_api = "0.11.15"

[[bin]]
name = "agent-kernel-x86_64"
path = "src/main.rs"
test = false
bench = false
required-features = ["bare-metal"]
