[package]
name = "agent-kernel-x86_64"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[features]
default = []
bare-metal = []

[dependencies]
agent-kernel-boot = { path = "../agent-kernel-boot" }
agent-kernel-core = { path = "../agent-kernel-core" }
agent-kernel-hal = { path = "../agent-kernel-hal" }
bootloader_api = "0.11.15"
ed25519-dalek = { version = "=2.2.0", default-features = false, features = ["fast"] }
sha2 = { version = "0.11.0", default-features = false }

[target.'cfg(target_arch = "x86_64")'.dependencies]
x86_64 = { version = "=0.15.5", default-features = false, features = ["instructions"] }

[target.'cfg(target_os = "none")'.dependencies]
sha2-legacy = { package = "sha2", version = "=0.10.9", default-features = false, features = ["force-soft"] }

[[bin]]
name = "agent-kernel-x86_64"
path = "src/main.rs"
test = false
bench = false
required-features = ["bare-metal"]
